--- a/gomimon/static/css/map.css
+++ b/gomimon/static/css/map.css
@@ -1,4 +1,9 @@
 /* style.css */
+/* map.css */
+
+
+
+/* その他のスタイル */
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -148,3 +153,6 @@ div > div > .poisute img {
         font-size: 0.8em;
     }
 }
+
+
+
