pngファイル修正

--- a/gomimon/templates/gomimon/gomimon.html
+++ b/gomimon/templates/gomimon/gomimon.html
@@ -217,7 +217,7 @@
 
     <div class="gomimon-container">
         <div class="gomimon-image-container">
-            <img src="{% static 'img/cansy.png' %}" alt="ゴミモンの画像" class="gomimon-image">
+            <img src="{% static 'img/cansy1.png' %}" alt="ゴミモンの画像" class="gomimon-image">
         </div>
         <div class="gomimon-name">カンペット</div>
         <div class="gomimon-level">Lv. 12</div>
