--- a/gomimon/templates/gomimon/gomimon.html
+++ b/gomimon/templates/gomimon/gomimon.html
@@ -220,7 +220,7 @@
             <img src="{% static 'img/cansy1.png' %}" alt="ゴミモンの画像" class="gomimon-image">
         </div>
         <div class="gomimon-name">カンペット</div>
-        <div class="gomimon-level">Lv. 12</div>
+        <div class="gomimon-level">Lv. 12</div><a href = "{% url 'start_battle' %}">テスト戦闘</a>
         <div class="status-text">HP</div>
         <div class="status-bar">
             <div class="status-bar-fill" style="width: 65%;"></div>
